--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
         ports: ["5432:5432"]
         options: >-
-          --health-cmd="pg_isready -U ${{ secrets.TEST_DB_USER }} -d ${{ secrets.TEST_DB_NAME }}"
+          --health-cmd="pg_isready -U admin -d mydb"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
