--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,4 @@
 name: Django CI
-# Test GitHub Actions
 
 on:
   push:
@@ -43,8 +42,8 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
+        working-directory: ./backend
         run: |
-          cd backend
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-django flake8
@@ -53,6 +52,7 @@ jobs:
         run: flake8 backend/
 
       - name: Run tests
+        working-directory: ./backend
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DEBUG: False
@@ -62,6 +62,5 @@ jobs:
           DB_HOST: localhost
           DB_PORT: 5432
         run: |
-          cd backend
           python manage.py migrate
           pytest
