--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   db:
     image: postgres:15
     restart: always
+    env_file:
+      - ./backend/.env
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
@@ -21,6 +23,8 @@ services:
       - "8000:8000"
     env_file:
       - ./backend/.env
+    environment:
+      - DB_HOST=db
     depends_on:
       - db
 
